tests/transpiler/x/py/record_assign.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Counter:
    n: int

def inc(c):
    c["n"] = c.n + 1
c = Counter(n=0)
inc(c)
print(c.n)
